fixing header on mobile

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -28,3 +28,9 @@ header > div > a {
     font-size: 1.2rem;
     font-weight: bold;
 }
+
+@media (max-width: 768px) {
+    header {
+        display: none;
+    }
+}
